Fix change request for font size and textbox aligntment

--- a/src/App.css
+++ b/src/App.css
@@ -2240,7 +2240,7 @@ form {
   justify-content: center;
   align-items: center;
   margin: auto;
-  padding: 9px;
+  padding: 0px;
   margin-left: 0px;
 }
 
@@ -2324,7 +2324,7 @@ form input {
 }
 
 input {
-    margin-right: 10px; /* Adjust the value as needed */
+    margin-right: 10px; 
 }
 
 #mc-embedded-subscribe:hover {
@@ -2367,37 +2367,63 @@ input {
 @media screen and (max-width: 480px) {
   #mc-embedded-subscribe {
     width: 100%;
-    margin: 0.2px;
     border-radius: 10px;
-    padding: 7.6px;
+    padding: 12.6px;
     font-size: 11px;
+    margin-right: 10px;
+    margin-left: -13px;
   }
   #mce-EMAIL {
     width: 100%;
-    margin: 11px;
     text-align: center;
-    font-size: 10px;
-    padding: 8px 18px 8px 8px;
+    font-size: 14px;
+    padding: 8px 20px 11px 16px;
+    margin-left: 0px;
+    margin-right: 40px
   }
   #subscribebox {
     width: 100%;
   }
 }
 
-@media screen and (max-width: 280px) {
+@media screen and (max-width: 375px) {
   #mc-embedded-subscribe {
     width: 100%;
-    margin: 0px;
-    border-radius: 9px;
-    padding: 6px;
+    border-radius: 10px;
+    padding: 11.6px;
     font-size: 11px;
+    margin-right: 10px;
+    margin-left: -13px;
   }
   #mce-EMAIL {
-    width: 106%;
-    margin: 20px;
+    width: 100%;
     text-align: center;
-    font-size: 9px;
-    padding: 8px 18px 8px 0px;
+    font-size: 12.5px;
+    padding: 10px 14px 10px 10px;
+    margin-left: 5px;
+    margin-right: 43px
+  }
+  #subscribebox {
+    width: 100%;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  #mc-embedded-subscribe {
+    width: 100%;
+    border-radius: 10px;
+    padding: 11.6px;
+    font-size: 11px;
+    margin-right: 10px;
+    margin-left: -13px;
+  }
+  #mce-EMAIL {
+    width: 100%;
+    text-align: center;
+    font-size: 11.5px;
+    padding: 11px 4px 10px 0px;
+    margin-left: 0px;
+    margin-right: 40px;
   }
   #subscribebox {
     width: 100%;
